<resources>
    <string name="app_name">Foody</string>
    <string name="view_list">View List</string>
    <string name="add">Add</string>
    <string name="choose_image">Choose Image</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="food_image">Food Image</string>
    <string name="update">Update</string>
    <string name="price_hint">00.00</string>
</resources>
