<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        tools:text="@string/name"
        android:hint="@string/name"
        android:padding="4dp"
        android:layout_margin="4dp"
         />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_margin="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:minEms="40"
        android:minLines="1"
        android:maxLines="200"
        android:inputType="numberDecimal"
        android:padding="4dp"
        tools:text="@string/price"
        android:hint="Description"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/price"
        android:layout_margin="4dp"
        android:layout_marginTop="234dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/choose_image" />

    <Button
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:layout_below="@id/imageView"
        />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:layout_below="@id/choose"
         />

    <Button
        android:id="@+id/view_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_list"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:layout_below="@id/choose"
        android:layout_toEndOf="@id/add"
      />
</RelativeLayout>