<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/food_image" />

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_image"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/food_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_name"
        android:maxLines="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/price" />

</RelativeLayout>